[tool.poetry]
name = "ttool"
version = "0.1.0"
description = "Tool's collection"
authors = ["tickten <tickten@outlook.com>"]
license = "MIT"
packages = [{ include = "ttool" }]

[tool.poetry.scripts]
ttool = "ttool:app"


[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.5"}
pyexiv2 = "^2.15.0"
pydantic = "^2.9.2"
novelai-api = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
